2012-02-09 Ugo Pattacini <ugo.pattacini@iit.it>
    The Cartesian Control now handles the plant model.

2012-02-09 Alessandro Scalzo <alessandro.scalzo@iit.it>
    EMS ethLoader splitted in library/GUI.
    * iCub\main\src\tools\ethLoader\CMakeLists.txt
    * iCub\main\src\tools\ethLoader\ethLoader\CMakeLists.txt    
    * iCub\main\src\tools\ethLoader\ethLoader\main.cpp
    * iCub\main\src\tools\ethLoader\ethLoaderLib\CMakeLists.txt
    * iCub\main\src\tools\ethLoader\ethLoaderLib\BoardInfo.h
    * iCub\main\src\tools\ethLoader\ethLoaderLib\BoardList.h
    * iCub\main\src\tools\ethLoader\ethLoaderLib\DSocket.cpp
    * iCub\main\src\tools\ethLoader\ethLoaderLib\DSocket.h
    * iCub\main\src\tools\ethLoader\ethLoaderLib\EthUpdater.cpp
    * iCub\main\src\tools\ethLoader\ethLoaderLib\EthUpdater.h

2012-02-08 Alessandro Scalzo <alessandro.scalzo@iit.it>
    Added EMS network firmware updater GUI.
    * iCub\main\src\tools\ethLoader\CMakeLists.txt
    * iCub\main\src\tools\ethLoader\ethLoader\BoardInfo.h
    * iCub\main\src\tools\ethLoader\ethLoader\BoardList.h
    * iCub\main\src\tools\ethLoader\ethLoader\CMakeLists.txt
    * iCub\main\src\tools\ethLoader\ethLoader\DSocket.h
    * iCub\main\src\tools\ethLoader\ethLoader\EthUpdater.cpp
    * iCub\main\src\tools\ethLoader\ethLoader\EthUpdater.h
    * iCub\main\src\tools\ethLoader\ethLoader\main.cpp

2012-01-28 Lorenzo Natale <lorenzo.natale@iit.it>
        * Added option to include or not test targets (less targets in Visual Studio projects)
		
2012-01-27 Lorenzo Natale <lorenzo.natale@iit.it>
        * tagging 1.1.9

2012-01-26 Ugo Pattacini <ugo.pattacini@iit.it>
        * iKinGazeCtrl: at start-up a process is run to determine the minimum allowed
          vergence as result of the re-alignment specified through the configuration parameters.

2012-01-20 Ugo Pattacini <ugo.pattacini@iit.it>
        * iKinGazeCtrl: configuration options are now retrieved from a file as per standard
