@@ -108,6 +108,8 @@ public:
     bool get2DPixel(const int camSel, const yarp::sig::Vector &x, yarp::sig::Vector &px);
     bool get3DPoint(const int camSel, const yarp::sig::Vector &px, const double z, yarp::sig::Vector &x);    
     bool get3DPointOnPlane(const int camSel, const yarp::sig::Vector &px, const yarp::sig::Vector &plane, yarp::sig::Vector &x);
+    bool get3DPointFromAngles(const int mode, const yarp::sig::Vector &ang, yarp::sig::Vector &x);
+    bool getAnglesFrom3DPoint(const yarp::sig::Vector &x, yarp::sig::Vector &ang);
     bool triangulate3DPoint(const yarp::sig::Vector &pxl, const yarp::sig::Vector &pxr, yarp::sig::Vector &x);
     bool getJointsDesired(yarp::sig::Vector &qdes);
     bool getJointsVelocities(yarp::sig::Vector &qdot);
